feat: api/mock/dummy 모드 분리 사전작업 (파일 추가)

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
 # 네이버 지도 API 키
 EXPO_PUBLIC_NAVER_MAP_CLIENT_ID=your_client_id_here
 EXPO_PUBLIC_NAVER_MAP_CLIENT_SECRET=your_client_secret_here
+
+# API 모드 설정 (api | mock | dummy)
+# - api: 실제 백엔드 서버 연결
+# - mock: 로컬 Mock 데이터 사용
+# - dummy: 빈 껍데기 (현재 상태)
+EXPO_PUBLIC_API_MODE=dummy
+
+# API 서버 URL (api 모드일 때 사용)
+EXPO_PUBLIC_API_BASE_URL=https://api.smartroadreflector.com
