feat: 화면에 현재 위치 플롯 표시

--- a/app.json
+++ b/app.json
@@ -24,7 +24,9 @@
       "package": "com.realpinkrabbit.smartroadreflector",
       "permissions": [
         "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION"
+        "ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION"
       ]
     },
     "web": {
@@ -60,6 +62,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "3052110b-2aa1-4282-b4fe-ae955be549fb"
+      }
     }
   }
 }
