feat: api 연결 준비 완료

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,13 @@ EXPO_PUBLIC_NAVER_MAP_CLIENT_SECRET=your_client_secret_here
 # - api: 실제 백엔드 서버 연결
 # - mock: 로컬 Mock 데이터 사용
 # - dummy: 빈 껍데기 (현재 상태)
-EXPO_PUBLIC_API_MODE=dummy
+EXPO_PUBLIC_API_MODE=api
 
 # API 서버 URL (api 모드일 때 사용)
-EXPO_PUBLIC_API_BASE_URL=https://api.smartroadreflector.com
+# Flask 서버의 실제 URL로 변경하세요
+EXPO_PUBLIC_API_BASE_URL=http://192.168.1.100:5000
+
+# 로컬 개발 시 사용할 수 있는 예시들:
+# EXPO_PUBLIC_API_BASE_URL=http://localhost:5000          # 로컬 개발 (웹)
+# EXPO_PUBLIC_API_BASE_URL=http://192.168.1.100:5000      # 같은 네트워크의 Flask 서버
+# EXPO_PUBLIC_API_BASE_URL=https://your-server.com        # 프로덕션 서버
